# dreaddit-conformal-mental-project

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml
data/processed/: calibration.csv  test.csv  train.csv  validation.csv
results/predictions/: baseline_predictions.csv  conformal_predictions.csv  transformer_predictions.csv
results/tables/: baseline_metrics.csv  conformal_metrics.csv  final_clean_performance_table.csv  final_stress_classification_table.csv  final_stress_conformal_table.csv  stress_test_classification_metrics.csv  stress_test_conformal_metrics.csv  transformer_metrics.csv
scripts/: conformal_layer.py  make_report_assets.py  prepare_data.py  stress_tests.py  train_baselines.py  train_transformer.py
src/: baselines.py  conformal.py  data.py  evaluate.py  plots.py  stress_tests.py  transformer.py  utils.py
